tests/ui/join_nullability_postgres/fail/left_join_requires_optional_right.stderr
error[E0308]: mismatched types
  --> tests/ui/join_nullability_postgres/fail/left_join_requires_optional_right.rs:38:23
   |
38 |     expect_left_wrong(qb.select(()).from(users).left_join(posts));
   |     ----------------- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `QueryBuilder<'_, Schema, _, _, _, ...>`, found `QueryBuilder<'_, ..., ..., ..., ..., ...>`
   |     |
   |     arguments to this function are incorrect
   |
   = note: expected struct `drizzle::postgres::builder::QueryBuilder<'_, Schema, _, _, _, (SelectUsers, SelectPosts)>`
              found struct `drizzle::postgres::builder::QueryBuilder<'_, Schema, drizzle::postgres::builder::SelectJoinSet, Posts, Scoped<SelectStar, Cons<Posts, Cons<Users, Nil>>>, (SelectUsers, Option<SelectPosts>)>`
note: function defined here
  --> tests/ui/join_nullability_postgres/fail/left_join_requires_optional_right.rs:31:4
   |
31 | fn expect_left_wrong<'a, St, T, M>(_: SelectBuilder<'a, Schema, St, T, M, (UserRow, PostRow)>) {}
   |    ^^^^^^^^^^^^^^^^^               ----------------------------------------------------------
